--- a/quieropizza/QuieroPizza.Web/Views/Productos/Index.cshtml
+++ b/quieropizza/QuieroPizza.Web/Views/Productos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<QuieroPizza.Web.Models.ProductoModel>
+﻿@model List< SheykaFashion.Web.Models.ProductoModel>
 @{
     ViewBag.Title = "Index";
 }  
